# vm-manager

./: .gitignore  CLAUDE.md  README.md  config.json  database.py  diagnose_gui.py  install.ps1  logger_config.py  main.py  models.py  proxy.py  pyproject.toml  security.py  spec.md  test.db  test_main.db  upgrade.ps1  vm_control.py
static/: index.html
tests/: conftest.py  test_e2e.py  test_main.py  test_middleware.py  test_models.py  test_proxy.py  test_security.py  test_vm_control.py
