[project]
name = "vm-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "bcrypt==4.0.1",
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.12",
]
