[project]
name = "vm-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "bcrypt==4.0.1",
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.scripts]
vm-manager = "main:app"

[tool.taskipy.tasks]
test = "pytest tests/ -v --ignore=tests/test_e2e.py"
test-all = "pytest tests/ -v"
lint = "ruff check ."
format = "ruff format ."
check = "ruff check . && ruff format --check . && pytest tests/ -v --ignore=tests/test_e2e.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.12",
    "taskipy>=1.14.1",
]
